# CyberSecurity

./: .gitignore  CMakeLists.txt  README.md  intel_keys.json  requirements.txt  traffic_monitor.py
build-linux/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  paranoid_av
include/AntivirusSuite/: Crypto.hpp  DarkWebScanner.hpp  FileIntegrityMonitor.hpp  FirewallManager.hpp  HeuristicAnalyzer.hpp  OpenAIAnalyzer.hpp  ProcessScanner.hpp  QuarantineManager.hpp  RansomwareMonitor.hpp  RootkitDetector.hpp  SignatureScanner.hpp  SystemInspector.hpp  ThreatIntel.hpp  TorClient.hpp  USBDeployer.hpp  WindowsRepairManager.hpp  WindowsSecurityCenterBridge.hpp  YaraScanner.hpp
resources/windows/: README.md  paranoid_gui.cmd
scripts/: build_windows.ps1  install_dependencies.ps1  install_suite.ps1  setup_paranoid.ps1
src/: Crypto.cpp  DarkWebScanner.cpp  FileIntegrityMonitor.cpp  FirewallManager.cpp  HeuristicAnalyzer.cpp  OpenAIAnalyzer.cpp  ProcessScanner.cpp  QuarantineManager.cpp  RansomwareMonitor.cpp  RootkitDetector.cpp  SignatureScanner.cpp  SystemInspector.cpp  ThreatIntel.cpp  TorClient.cpp  USBDeployer.cpp  WindowsRepairManager.cpp  WindowsSecurityCenterBridge.cpp  YaraScanner.cpp  main.cpp
tools/: create_usb_scanner.sh
ui/: .gitignore  angular.json  ionic.config.json  karma.conf.js  package-lock.json  package.json  package.runtime.json  tsconfig.json
ui/electron/: main.js  preload.js  profile-vault.js
ui/scripts/: capture-electron.mjs  capture-web.mjs  verify-ui.mjs
ui/src/: global.scss  index.html
ui/src/app/: app-routing.module.ts  app.component.scss  app.module.ts
ui/src/app/pages/dark-web/: dark-web.module.ts  dark-web.page.html  dark-web.page.scss  dark-web.page.ts
ui/src/app/pages/dashboard/: dashboard.module.ts  dashboard.page.html  dashboard.page.scss  dashboard.page.ts
ui/src/app/pages/file-integrity/: file-integrity.module.ts  file-integrity.page.html  file-integrity.page.scss  file-integrity.page.ts
ui/src/app/pages/firewall/: firewall.module.ts  firewall.page.html  firewall.page.scss  firewall.page.ts
ui/src/app/pages/processes/: processes.module.ts  processes.page.html  processes.page.scss  processes.page.ts
ui/src/app/pages/profile/: profile-routing.module.ts  profile.module.ts  profile.page.html  profile.page.scss  profile.page.ts
ui/src/app/pages/system/: system.module.ts  system.page.html  system.page.scss  system.page.ts
ui/src/app/pages/threat-intel/: threat-intel.module.ts  threat-intel.page.html  threat-intel.page.scss  threat-intel.page.ts
ui/src/app/services/: backend.service.ts  profile.service.ts  shell.service.ts  subscription.service.ts
ui/src/app/shared/: shared.module.ts
ui/src/app/shared/components/log-stream/: log-stream.component.html  log-stream.component.scss  log-stream.component.ts
ui/src/app/tabs/: tabs-routing.module.ts  tabs.module.ts  tabs.page.html  tabs.page.scss  tabs.page.ts
ui/src/theme/: _branding.scss
